@@ -1,6 +1,26 @@
 This is rglclock, Rotating GL Clock.
 
 Copyright (C) 1998 Hypercore Software Design, Ltd.
-
 gdkGL Copyright (C) 1997, 1998 AOSASA Shigeru.
+
+rglclock is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version
+2 of the License, or (at your option) any later version.
+
+rglclock is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See
+the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public
+License along with this program; if not, write to the Free
+Software Foundation, Inc., 59 Temple Place, Suite 330,
+Boston, MA 02111-1307, USA.
+
+CONTACT:
+
+Send any comments or bug reports to:
+
+     rglclock@lists.hypercore.co.jp
 
